2006-08-15  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Fix intltool req.
	* po/nb.po: Update this.

2006-08-3  Arangel Angov <ufo@linux.net.mk>

	* Added sl.po and 'sl' to LINGUAS.

2006-07-24  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.15.4.

2006-07-19  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-metadata-musicbrainz.c:
	Fix typo, adding date information to more albums (#348004, thanks
	Alex Lancaster).

2006-07-12  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Fix typo (#347284, Chrisophe Fergeau)

2006-07-12  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-extractor.c:
	Better error handling (#338511, Tim-Philipp Muller)

2006-06-18  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Don't destroy the prefs window if the window manager closes it
	(#343600).

2006-06-18  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Clear the genre field when re-reading the disc (#340524)

2006-06-14  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.15.3.

2006-06-05  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* libjuicer/sj-metadata-musicbrainz.c:
	* src/sj-main.c:
	* src/sj-play.c:
	Update for new n-c-b API (#342603, thanks William Jon McCann)

2006-05-17  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Bump intltool requirement, version 2.15.2.1.

2006-05-14  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.15.2.

2006-05-09  Ross Burton  <ross@burtonini.com>

	* src/sj-error.[ch]:
	* src/sj-metadata-cdtext.h:
	Remove

	* tests/Makefile.am:
	Update.

2006-05-09  Ross Burton  <ross@burtonini.com>

	* [most files]:
	Split into libjuicer, the backend code, and src, the UI.

2006-05-02  Luca Cavalli  <loopback@slackit.org>

	* src/gconf-bridge.c: (window_binding_perform_scheduled_sync),
	(window_binding_state_event_cb), (gconf_bridge_bind_window):
	Save and restore window maximized state (#340038).
