@@ -11,6 +11,8 @@ schema_in_files = sound-juicer.schemas.in
 schema_DATA = $(schema_in_files:.schemas.in=.schemas)
 @INTLTOOL_SCHEMAS_RULE@
 
+gtk_update_icon_cache = gtk-update-icon-cache -f -t $(datadir)/icons/hicolor
+
 install-icons:
 # This sucks
 	for size in 16x16 22x22 24x24 scalable; do mkdir --parents $(DESTDIR)/$(datadir)/icons/hicolor/$$size/apps; done
@@ -18,6 +20,14 @@ install-icons:
 	install -m 644 $(srcdir)/sound-juicer-22.png $(DESTDIR)/$(datadir)/icons/hicolor/22x22/apps/sound-juicer.png
 	install -m 644 $(srcdir)/sound-juicer-24.png $(DESTDIR)/$(datadir)/icons/hicolor/24x24/apps/sound-juicer.png
 	install -m 644 $(srcdir)/sound-juicer.svg $(DESTDIR)/$(datadir)/icons/hicolor/scalable/apps/sound-juicer.svg
+
+	@-if test -z "$(DESTDIR)"; then \
+		echo "Updating GTK icon cache."; \
+		$(gtk_update_icon_cache); \
+	else \
+		echo "*** Icon cache not updated.  After install, run this:"; \
+		echo "***   $(gtk_update_icon_cache)"; \
+	fi
 
 install-data-local: install-icons
 	GCONF_CONFIG_SOURCE=$(GCONF_SCHEMA_CONFIG_SOURCE) \
