@@ -1,3 +1,8 @@
+2006-08-20  Ross Burton  <ross@burtonini.com>
+
+	* data/Makefile.am:
+	Update the icon cache (#348972)
+
 2006-08-15  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* configure.in: Fix intltool req.
